--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auluycfiipmqc",
+  "name": "psltzyvkuizr",
   "version": "1.0.0",
   "description": "用法如下",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/agormost/auluycfiipmqc.git"
+    "url": "https://github.com/xinx3516/psltzyvkuizr.git"
   },
   "author": "",
   "license": "ISC",
